Fix the page layout jumping around as the play buttons are initialized.

--- a/Styles/wanikani_vocab.scss
+++ b/Styles/wanikani_vocab.scss
@@ -170,7 +170,6 @@
    #metaData span { margin-right: 10pt;}
 
    #highlightedSentencesList {
-      padding-left: 5px;
       padding-right: 5px;
       .highlightedSentence:not(:nth-of-type(1)) { margin-top: 10px; }
       .highlightedSentence:last-of-type { margin-bottom: 3px; }
